@@ -92,6 +92,7 @@ Module_Types available_modules[] =
   // Switch
   { {"switch",         "sw"}, Switches::Switch::construct},
 
+#ifdef HAVE_GUI
   // Logic
   { {"and2", "and2"}, AND2Gate::construct},
   { {"or2",  "or2"},  OR2Gate::construct},
@@ -101,7 +102,7 @@ Module_Types available_modules[] =
   // Leds
   { {"led_7segments", "led7s"}, Leds::Led_7Segments::construct},
   { {"led", "led"}, Leds::Led::construct},
-
+#endif
   { {"pullup",           "pu"},   PullupResistor::pu_construct },
   { {"pulldown",         "pd"},   PullupResistor::pd_construct },
   { {"pushbutton",       "pb"},   PushButton::construct },
