@@ -1,3 +1,9 @@
+2006-05-25 Scott Dattalo <scott@dattalo.com>
+	* modules/switch.h, modules/switch.cc, modules/gpsim_modules.cc:
+	  Only use gui if enabled. 
+	* modules/stimuli.h, modules/stimuli.cc: Began adding support for
+	  file stimulus.
+
 2006-05-24 Borut Razem <borut.razem@siol.net>
 	* modules/makefile.mingw, modules/modules.vcproj: added stimuli.*
 	* plat/win32/libgpsim: MSVC sync
